# duel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  example-config.toml
.github/workflows/: ci.yml
docs/: actor_critic_loop.dot  arch.dot  data_flow.dot  state_machine.dot  tui_layout.dot
src/: app.rs  config.rs  gpu.rs  main.rs  ollama.rs  ui.rs  util.rs
