[package]
name = "duel"
version = "0.1.0"
edition = "2021"
description = "Actor/critic infinite refinement loop TUI powered by qwen3.5:4b"
license = "MIT"

[[bin]]
name = "duel"
path = "src/main.rs"

[dependencies]
ratatui       = "0.29"
crossterm     = "0.28"
tokio         = { version = "1", features = ["full"] }
reqwest       = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
unicode-width = "0.1"
chrono        = { version = "0.4", features = ["serde"] }
toml          = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
